--- a/plugin.xml
+++ b/plugin.xml
@@ -22,5 +22,16 @@
             icon="minimap.gif">
       </view>
    </extension>
+   <extension
+         id="base-rules"
+         name="Base Rules"
+         point="pt.iscte.pidesco.minimap.inspection">
+      <inspection
+            class="pa.iscde.minimap.extensibility.base.BaseInspection"
+            description="Provides examples for how to implement new inspection rules."
+            id="base-inspection"
+            name="Base Inspections">
+      </inspection>
+   </extension>
 
 </plugin>
