Refactor to allow inspection rules to be enabled/disabled

--- a/plugin.xml
+++ b/plugin.xml
@@ -39,7 +39,7 @@
          name="Base Rules"
          point="pt.iscte.pidesco.minimap.inspection">
       <inspection
-            class="pa.iscde.minimap.extensibility.base.BaseInspection"
+            class="pa.iscde.minimap.extensibility.inspections.BaseInspection"
             description="Provides examples for how to implement new inspection rules."
             id="base-inspection"
             name="Base Inspections">
