--- a/pt.iscte.pidesco.minimap.ext.conventions/.project
+++ b/pt.iscte.pidesco.minimap.ext.conventions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pt.iscte.pidesco.minimap</name>
+	<name>pt.iscte.pidesco.minimap.ext.conventions</name>
 	<comment></comment>
 	<projects>
 	</projects>
